// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Empty lyzer error 1`] = `
<div
  class="lyzer-error"
  data-testid="lyzer-error"
>
  <svg
    class="lucide lucide-circle-alert lyzer-error-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span
    class="lyzer-error-message"
  >
    An unexpected error occurred
  </span>
</div>
`;

exports[`Lyzer error with error obj 1`] = `
<div
  class="lyzer-error"
  data-testid="lyzer-error"
>
  <svg
    class="lucide lucide-circle-alert lyzer-error-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span
    class="lyzer-error-message"
  >
    Test Custom Error Obj
  </span>
</div>
`;

exports[`Lyzer error with message 1`] = `
<div
  class="lyzer-error"
  data-testid="lyzer-error"
>
  <svg
    class="lucide lucide-circle-alert lyzer-error-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span
    class="lyzer-error-message"
  >
    Test Custom Error
  </span>
</div>
`;
